--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1>Teste de render na matéria de DevOps</h1>
-        <h2>Zoom Out Color</h2>
+        <h2>Teste css:</h2>
         <div class="quadrado"></div>
     </div>
 </body>
